Update demo to new js bundle name

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 </div>
 <div class="center-abs glyph play-glyph"><svg xmlns="http://www.w3.org/2000/svg" viewBox="-279 200 81 82" enable-background="new -279 200 81 82"><circle fill="#fff" stroke="#565656" stroke-width="3" stroke-miterlimit="10" cx="-239" cy="240" r="39"/><path fill="#4F4F4F" d="M-249.5 220.8v38.4l30.5-18.8z"/></svg></div>
 <div class="center-abs glyph pause-glyph hide"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 81 82" enable-background="new 0 0 81 82"><circle fill="#fff" stroke="#565656" stroke-width="3" stroke-miterlimit="10" cx="40" cy="40" r="39"/><path fill="#4F4F4F" d="M29 24.7h6v30.7h-6zM45 24.7h6v30.7h-6z"/></svg></div>
-<script src="dist/move-here.min.js"></script>
+<script src="dist/move-here-es5.min.js"></script>
 <script>
     var numberAssetsToCreate = 1000;
     var circleDiameter = 100;
